Minor fix, set html and body to stretch the whole screen

--- a/oled_configurator/templates/style.css
+++ b/oled_configurator/templates/style.css
@@ -1,3 +1,8 @@
+html, body {
+    margin: 0;
+    height: 100%;
+}
+
 .canvas {
     border-width: 5px;
     border-style: solid;
